--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/steak.html">Steak</a></li>
+        <li><a href="./recipes/mac.html">Mac and Cheese</a></li>
     </ul>
 </body>
 </html>
