--- a/recipes/mac.html
+++ b/recipes/mac.html
@@ -9,19 +9,19 @@
     <h1>Mac and Cheese</h1>
     <img src="../img/mac.jpg" height="400">
     <h2>Description</h2>
-    <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling.</p>
-    <p>A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan.</p>    
+    <p>This crockpot mac and cheese is creamy, comforting, and takes just moments to assemble in a slow cooker. </p>
+    <p>Great for large family gatherings and to take to potluck dinners. It's always a big hit!.</p>    
     <h2>Ingredients</h2>
     <ul>
-        <li>1/2 pound ground pork</li>
-        <li>1/2 pound lean ground beef</li>
-        <li>1/2 cup minced onion</li>
-        <li>1 (28 ounce) can crushed tomatoes</li>
-        <li>1 (8 ounce) can tomato sauce</li>
-        <li>2 Tbs parsely</li>
-        <li>1 crushed garlic clove</li>
-        <li>1 <small>1/2</small> tsp dried basil</li>
-        <li>1 <small>1/2</small> tsp salt</li>
+        <li>1 (16 ounce) package elbow macaronit</li>
+        <li>1/2 cup butter</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>1 (16 ounce) package shredded Cheddar cheese, divided</li>
+        <li>1 (5 ounce) can evaporated milk</li>
+        <li>2 large eggs, well beaten</li>
+        <li>2 cups whole milk</li>
+        <li>1 (10.5 ounce) can condensed Cheddar cheese soup (such as Campbell's)</li>
+        <li>1 pinch paprika, or as desired (Optional)</li>
         <li>1/2 tsp dried oregano</li>
         <li>1/8 tsp white sugar</li>
         <li>1 (16 ounce) package lasagna noodles</li>
@@ -34,11 +34,12 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li><strong>Cook the meat:</strong> Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar</li>
-        <li><strong>Cook the noodles:</strong> Boil the lasagna noodles in lightly salted water until they're al dente.</li>
-        <li><strong>Make the cheese layer:</strong> Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
-        <li><strong>Assemble the lasagna:</strong> Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
-        <li><strong>Bake the lasagna:</strong> Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
+        <li><strong>Boil the pasta:</strong> In salted water, then drain and transfer to the slow cooker.</li>
+        <li><strong>Stir in:</strong> The butter, seasonings, and about half of the Cheddar.</li>
+        <li><strong>Whisk:</strong> The evaporated milk and eggs together, then stir into the pasta.</li>
+        <li><strong>Whisk:</strong> The milk and the soup together, then stir into the pasta.</li>
+        <li><strong>Sprinkle:</strong> The remaining cheese over the pasta mixture and garnish with paprika.</li>
+        <li>Cook on Low for 2 ½ to 3 hours.</li>
     </ol>
     <a href="../index.html">Home</a>
 </body>
